Ajustes no titulo do curso

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html ng-app="mean">
 <head>
     <meta charset="UTF-8">
-    <title>Angular</title>
+    <title>Estudos MEAN</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.min.css">
